# Ava-

./: .gitignore  Procfile  README.md  asgi.py  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  udo journalctl -u gunicorn -b --no-pager  urls.py  wsgi.py
ava/: .gitignore  Procfile  render.yaml  requirements.txt  urls.py
ava/ava/: asgi.py  settings.py  wsgi.py
ava/chat/: consumers.py  models.py  urls.py  views.py
ava/chat/migrations/: 0001_initial.py  0004_message_is_read.py
ava/myapp/: forms.py  models.py  urls.py  views.py
ava/myapp/migrations/: 0002_delete_customuser.py  0003_initial.py  0005_alter_profile_profile_pic.py  0006_gallery.py  (+9 more)
ava/notifications/: models.py  urls.py  views.py
ava/swipes/: models.py  urls.py  views.py
chat/: consumers.py  urls.py  views.py
chat/migrations/: 0002_initial.py  0003_rename_content_message_message.py
core/: asgi.py  settings.py  urls.py
myapp/: decorators.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
myapp/migrations/: 0001_initial.py  0004_profile_country_alter_profile_profile_pic.py  0007_profile_hobbies_profile_lifestyle_and_more.py
myapp/templates/: base.html
notifications/: urls.py  views.py
static/core/: asgi.py  settings.py  wsgi.py
static/css/: account.css  swipes.css
staticfiles/css/: login.css  profile.css
swipes/: urls.py  views.py
swipes/migrations/: 0001_initial.py
templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
(+38 files in other folders)
