
[tool.poetry]
name = "ava"
version = "0.1.0"
description = "Ava matchmaking platform"
authors = ["Your Name <you@example.com>"]
package-mode = false 
[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
channels = "^3.0.5"
daphne = "^3.0"
channels-redis = "^4.2"
django-allauth = "^0.62"
requests = "^2.32"
redis = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
